Update 01. TypeScript 란 무엇인가.md

--- a/CH 01. TypeScript/01. TypeScript 란 무엇인가.md
+++ b/CH 01. TypeScript/01. TypeScript 란 무엇인가.md
@@ -42,5 +42,5 @@
 
 
 
-![image-20221204224448147](../imges/01. TypeScript 란 무엇인가/image-20221204224448147.png)
+![image](https://user-images.githubusercontent.com/99783474/205494515-68a57d02-7b18-4dae-b789-b56eff5a6ded.png)
 
