--- a/CH 01. TypeScript/02. TypeScript 설치 및 사용.md
+++ b/CH 01. TypeScript/02. TypeScript 설치 및 사용.md
@@ -9,3 +9,191 @@
 ### browser
 
 * HTML을 동적으로 만들기 위해 브라우저에서 자바스크립트를 해석하고, DOM을 제어할 수 있도록 하는 자바스크립트 런타임 환경 
+
+
+
+### 💡 node.js 설치 
+
+* https://nodejs.org
+* node.js version manager
+  * nvm 
+  * n 
+
+
+
+### 💡 npm/ visual studio plugin
+
+* npm 
+  * npm i typescript -g 
+  * node_modules/.bin/tsc
+  * tsc source.ts
+* visual studio plugin 설치 
+  * visual studio 2017/2015 update 3이후로는 디폴트로 설치되어 있다. 
+  * 만약 설치가 안되어 있다면, 설치 권장 
+
+
+
+### ✔ 간단한 컴파일러 사용 예제 
+
+* 타입스크립트 컴파일러를 글로벌로 설치 후, 
+  * cli 명령어로 파일 컴파일 
+  * 특정 프로젝트 폴더에서 타입스크립트 컴파일러 설정에 맞춰 컴파일 
+  * 특정 프로젝트 폴더에서 타입스크립트 컴파일러 설정에 맞춰 컴파일 (watch 모드)
+* 프로젝트에 타입스크립트 컴파일러를 설치 후, 
+  * .bin 안의 명령어로 파일 컴파일 
+  * npm 스크립트로 파일 컴파일 
+  * 프로젝트에 있는 타입스크립트 설정에 맞춰, npm 스크립트로 컴파일 
+  * 프로젝트에 있는 타입스크립트 설정에 맞춰, npm 스크립트로 컴파일 (watch 모드)
+
+
+
+```
+npm i typescript -g 
+```
+
+![image-20221204230256197](../imges/02. TypeScript 설치 및 사용/image-20221204230256197.png)
+
+
+
+```
+nano test.ts
+```
+
+> console.log('hello');
+
+
+
+```
+tsc test.ts 
+```
+
+
+
+```
+cat test.js
+```
+
+> console.log('hello');
+
+
+
+```
+mkdir tsc-project
+```
+
+```
+cd tsc-project
+```
+
+```
+nano test.ts
+```
+
+```
+tsc --init
+```
+
+![image-20221204231825026](../imges/02. TypeScript 설치 및 사용/image-20221204231825026.png)
+
+
+
+
+
+---
+
+
+
+```
+npm uninstall typescript -g 
+```
+
+```
+rm -rf tsc-project
+```
+
+모두 삭제 후 다시 시작 
+
+
+
+```
+mkdir tsc-project
+```
+
+```
+cd tsc-project
+```
+
+```
+npm init -y
+```
+
+![image-20221204232532868](../imges/02. TypeScript 설치 및 사용/image-20221204232532868.png)
+
+
+
+```
+npm i typescript
+```
+
+![image-20221204232628907](../imges/02. TypeScript 설치 및 사용/image-20221204232628907.png)
+
+
+
+```
+type package.json
+```
+
+![image-20221204232803806](../imges/02. TypeScript 설치 및 사용/image-20221204232803806.png)
+
+
+
+```
+dir
+```
+
+```
+dir mode_modules
+```
+
+```
+dir -al node_modules
+```
+
+```
+dir -al node_modules/.bin
+```
+
+
+
+(1) 
+
+```
+node_modules/.bin.tsc
+```
+
+(2) 
+
+```
+node_modules/typescript/bin/tsc
+```
+
+(3) 
+
+```
+npx tsc --init
+```
+
+![image-20221204233328832](../imges/02. TypeScript 설치 및 사용/image-20221204233328832.png)
+
+
+
+```
+dir
+```
+
+![image-20221204233401895](../imges/02. TypeScript 설치 및 사용/image-20221204233401895.png)
+
+
+
+
+
